<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="rateData"
            type="com.karim.currencyconverter.model.Rate" />
        <variable
            name="clickListener"
            type="com.karim.currencyconverter.ui.adapters.RateItemListener" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@color/white"
    android:onClick="@{() -> clickListener.onClick(rateData)}"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/flag_iv"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/country_flag"
        android:scaleType="fitXY"
        app:resourceImage="@{rateData.flag}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/currency_tv"
        style="@style/PrimaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@{rateData.name}"
        tools:text="@string/bhd"
        app:layout_constraintStart_toEndOf="@+id/flag_iv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rate_tv"
        style="@style/PrimaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@{String.valueOf(rateData.rate)}"
        tools:text="@string/dummy_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>